<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/BlueGreyPrimary">

    <TextView android:text="@string/title" android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleTextView"
        android:gravity="center"
        android:textSize="24dp"
        android:textColor="@color/White"
        android:layout_margin="2dp" />

    <Button
        android:text="@string/spotify_streamer"
        android:id="@+id/spotifyButton"
        style="@style/AppButton" />

    <Button
        android:text="@string/scores_app"
        android:id="@+id/scoresButton"
        style="@style/AppButton" />

    <Button
        android:text="@string/library_app"
        android:id="@+id/libraryButton"
        style="@style/AppButton" />

    <Button
        android:text="@string/build_it_bigger"
        android:id="@+id/buildItBiggerButton"
        style="@style/AppButton" />

    <Button
        android:text="@string/xyz_reader"
        android:id="@+id/xyzButton"
        style="@style/AppButton" />

    <Button
        android:text="@string/capstone"
        android:id="@+id/capstoneButton"
        style="@style/CapstoneButton" />

</LinearLayout>
